Form input border color dark mode fix

--- a/scss/_dark.scss
+++ b/scss/_dark.scss
@@ -47,6 +47,7 @@
     }
 
     [name="subscribe"] input {
+        border-color: #2f2f2f;
         background-color: rgba(44,44,44,.2);
         color: white;
     }
